examples/test/testpolicy16215.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16215
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key5: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value23
          key45: value24
          key19: value39
      podSelector:
        matchLabels:
          key33: value34
